# zinc

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  RollingChecksum.hpp  Utilities.hpp  main.cpp  rrsync.cpp  rrsync.h  setup.py
include/: zinc.h
include/zinc/: StrongHash.h  zinc.h
src/: CMakeLists.txt
src/fuzzer/: CMakeLists.txt  fuzzer.cpp
src/libzinc/: CMakeLists.txt  DeltaResolver.cpp  DeltaResolver.h  File.hpp  HashBlocksTask.cpp  HashBlocksTask.h  RollingChecksum.hpp  StrongHash.cpp  Task.hpp  Utilities.cpp  Utilities.hpp  hash.cpp  hashmaps.h  sha1.c  sha1.h  zinc.cpp  zinc_error.hpp
src/libzinc/crypto/: fnv1a.cpp  fnv1a.h  sha1.c  sha1.h
src/libzinc/mmap/: FileMemoryMap.cpp  FileMemoryMap.h  FileMemoryMap_unix.cpp  FileMemoryMap_win32.cpp
src/pyrrsync/: CMakeLists.txt  pyrrsync.cpp
src/pyzinc/: CMakeLists.txt  pyzinc.cpp
src/zinc/: CMakeLists.txt  pyzinc.cpp  requirements.txt  setup.py  zinc  zinc.cpp
tests/: CMakeLists.txt  common.cpp  common.h  test-compare.cpp  test-hash.cpp  test-sync.cpp  test_blocks_swapped.cpp  test_common.cpp  test_driver.cpp  test_end_add.cpp  test_end_remove.cpp  test_front_add.cpp  test_front_remove.cpp  test_identical.cpp  test_rollsum.cpp  test_shuffle.cpp  test_sync.cpp
